app/assets/stylesheets/events.scss
$light-blue: #E6EDF7;
$dark-blue: #8B95A3;
$dark-gray: #434747;

@import 'breakpoint';

.events-section {
  background-color: #F6F5F3;
  min-height: 100vh;
  color: darken($dark-gray, 10%);
  text-align: center;
  position: relative;

  .events-anchor {
    padding: 8% 0;
    
    @include breakpoint(large){
      padding: 2%;
    }
  }

  h3 {
    font-family: 'Pathway Gothic One';
    font-size: 2rem;
    text-transform: uppercase;
    margin-bottom: 0;
    margin-top: 0;
  }

  .day-tile-background {
    padding: 1rem;
    margin: 1rem 1rem 0 1rem;
  }

  .events-header {
    font-family: 'Roboto Slab', serif;
    margin-top: 0;
    text-align: center;
    font-size: 2.5em;
  }

  .event-tile {
    margin-bottom: .5rem;
    padding: 2%;

    p {
      font-size: 1.1rem;
      font-family: 'Roboto Slab';
      padding: 0;
      letter-spacing: .6px;
      margin-top: 0;
      margin-bottom: 0;
    }
  }

  .flamingo {
    max-height: 5rem;
    position: absolute;
    bottom: 3rem;
    transform: translateX(50%);
    left: 50%;
  }

  .days-wrapper {
    @include breakpoint(eventPadding){
      margin-right: 10%;
    }
  }

}

